# Templar

./: .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
src/: config.rs  email.rs  lib.rs  logger.rs  main.rs  routes.rs
src/templates/: base.hbs  welcome.hbs
