[package]
name = "Templar"
version = "0.1.0"
edition = "2024"
[dependencies]
axum = { version = "0.8.6", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", features = ["tokio1", "builder", "smtp-transport", "hostname", "tokio1-native-tls", "file-transport"] }
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] }
handlebars = "6.3.2"
once_cell = "1"
dotenvy = "0.15"
rand = "0.9.2"
anyhow = "1.0.100"
log = "0.4.28"
eventlog = "0.3.0"

